# Igloo

./: .gitignore  0Igloo.pd  README.md  array_get2.pd  compute_tables.pd  grid_abs.pd  inst_line.pd  visu.pd
firmware/igloo_fw/: CMakeLists.txt  PID_v1.cpp  PID_v1.h  git_describe.sh  help.txt  main.cpp  main.json  main.json-test  motor.hpp  private.pem  pt.uf2  ramp.hpp  trajectory_table.hpp  version.cpp  wifi.cmake
firmware/modules/: CMakeLists.txt
firmware/modules/partition_info/: CMakeLists.txt  partition_info.c  partition_info.h  uf2_family_ids.h
firmware/modules/wifraise/: CMakeLists.txt  discover_server.hpp  fraise.c  ota_server.cpp  partition_info.c  partition_info.h  system.cpp  system.h  udp_server.hpp  uf2_family_ids.c  wifi_partition.hpp
patch/: add_point.pd  compute_tables.pd  current_sequence.txt  get_step_time.pd  grid_abs.pd  pos_roues.pd  show_step.pd  visu.pd
patch/driver/: debounce.pd  driver.pd  monitor.pd  motor_control.pd  send_frame_wifruit.pd  wifruit.pd
patch/edit/: compute_tables.pd  current_sequence.txt  get_step_time.pd  show_step.pd  speedlimm.pd  visu.pd
sequences/: 23juin  truc  truc_avec_arrets
